--- a/css/styles.css
+++ b/css/styles.css
@@ -1,168 +1,168 @@
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
 
-  .container {
-    margin: auto;
-    max-width: 1280px;
-  }
+.container {
+  margin: auto;
+  max-width: 1280px;
+}
 
-  main {
-    background-color: #e7f0c5;
-    padding-bottom: 75px;
-    height: 100vh;
-  }
+main {
+  background-color: #e7f0c5;
+  padding-bottom: 75px;
+  height: 100vh;
+}
 
-  header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-  }
-
- 
-  .nav-list-item{
-    margin-right: 20px ;
-  }
-
-  .logo span{
-    color: #62D0DF;
-    font-size: 24px;
-  }
-
-  .navigator {
-    font-size: 14px;
-    
-  }
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
 
 
-  .navigator nav ul {
-    display: flex;
-    
-  }
+.nav-list-item{
+  margin-right: 20px ;
+}
 
-  .nav-list {
-    list-style-type: none;
-    
-  }
+.logo span{
+  color: #62D0DF;
+  font-size: 24px;
+}
 
- 
-
-  .nav-list-link {
-    color: #22356F;
-  }
-
-  .menu{
-    display: flex;
-    justify-content: space-between;
-    width: 708px;
-    z-index: 1;
-
-  }
-
-
-  .menu a {
-    text-decoration: none;
-  }
-
-  .nav-list-link:hover{
-    text-decoration: underline;
-    font-weight: 600 ;
-  }
-
-  .contacts-link{
-    color: #ffff;
-    font-size: 14px;
-    background-color: #62D0DF;
-    padding: 10px 15px ;
-    border-radius: 50px;
-    
-  }
-
-
-  .main_content{
-    display: flex;
-    height: 100%;
-    width: 100%;
-    
-  }
+.navigator {
+  font-size: 14px;
   
-  .content_description {
-    width: 484px;
-    height: 167px;
-    font-size: 24px;
-    line-height: 42px;
-    color: #22356f;
-  }
-   
+}
+
+
+.navigator nav ul {
+  display: flex;
+  
+}
+
+.nav-list {
+  list-style-type: none;
+  
+}
+
+
+
+.nav-list-link {
+  color: #22356F;
+}
+
+.menu{
+  display: flex;
+  justify-content: space-between;
+  width: 708px;
+  z-index: 1;
+
+}
+
+
+.menu a {
+  text-decoration: none;
+}
+
+.nav-list-link:hover{
+  text-decoration: underline;
+  font-weight: 600 ;
+}
+
+.contacts-link{
+  color: #ffff;
+  font-size: 14px;
+  background-color: #62D0DF;
+  padding: 10px 15px ;
+  border-radius: 50px;
+  
+}
+
+
+.main_content{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  
+}
+
+.content_description {
+  width: 484px;
+  height: 167px;
+  font-size: 24px;
+  line-height: 42px;
+  color: #22356f;
+}
+ 
 
 
 
 .content_logo{
-  margin-top: 100px;
-  height: 64px;
-  color: #62D0DF;
+margin-top: 100px;
+height: 64px;
+color: #62D0DF;
 }
 
 .content_title {
-  width: 484px;
-  height: 167px;
-  font-size: 40px;
-  margin-bottom: 19px;
-  color: #22356f;
-  font-weight: 900;
+width: 484px;
+height: 167px;
+font-size: 40px;
+margin-bottom: 19px;
+color: #22356f;
+font-weight: 900;
 }
 
 
 
 .content_btn_1 {
-  width: 150px;
-  height: 50px;
-  background-color: #f9b640;
-  color: #ffffff;
-  font-size: 16px ;
-  border: none;
-  font-weight: 500;
-  margin-bottom: 66px;
-  margin-top: 25px;
+width: 150px;
+height: 50px;
+background-color: #f9b640;
+color: #ffffff;
+font-size: 16px ;
+border: none;
+font-weight: 500;
+margin-bottom: 66px;
+margin-top: 25px;
 }
 
 .content_btn_2 {
-  width: 150px;
-  height: 43px;
-  color:#f9b640;
-  background-color:#e7f0c5 ;
-  font-size: 16px ;
-  border: none;
-  margin-left: 40px;
-  font-weight: 500;
-  margin-bottom: 66px;
-  
+width: 150px;
+height: 43px;
+color:#f9b640;
+background-color:#e7f0c5 ;
+font-size: 16px ;
+border: none;
+margin-left: 40px;
+font-weight: 500;
+margin-bottom: 66px;
+
 } 
 
 .main-right-block{
-  width: 100%;
-  height: 100%;
-  
+width: 100%;
+height: 100%;
+
 }
 
 .oval-1 {
-  position: absolute;
-  top: 0px;
-  right: -90px;
+position: absolute;
+top: 0px;
+right: -90px;
 
-  width: 807.71px;
-  height: 544.93px;
+width: 807.71px;
+height: 544.93px;
 
-  
-  
-  background: #ffffff;
-  border-radius: 312.159px;
-  transform: matrix(-0.5, 0.87, 0.87, 0.5, 0, 0);
+
+
+background: #ffffff;
+border-radius: 312.159px;
+transform: matrix(-0.5, 0.87, 0.87, 0.5, 0, 0);
 
 
 
@@ -170,211 +170,306 @@
 
 
 .oval-2 {
-  position: absolute;
-  z-index: 1; 
-  width: 807.71px;
-  height: 544.93px;
-  left: 1157.47px;
-  top: 92.57px; 
-  background-color: #e7f0c5;
-  border-radius: 312.159px;
-  transform: matrix(-0.87, 0.5, 0.5, 0.87, 0, 0);
+position: absolute;
+z-index: 1; 
+width: 807.71px;
+height: 544.93px;
+left: 1157.47px;
+top: 92.57px; 
+background-color: #e7f0c5;
+border-radius: 312.159px;
+transform: matrix(-0.87, 0.5, 0.5, 0.87, 0, 0);
 }
 
 .oval-img {
-  position: absolute;
-  width: 920px;
-  height: 625px;
-  border-radius: 312.159px;
-  top: -38px;
-  right: -58px;
-  transform: matrix(-0.87, 0.0, 0.0, 0.87, 0, 0);
-  opacity: 0.8;
+position: absolute;
+width: 920px;
+height: 625px;
+border-radius: 312.159px;
+top: -38px;
+right: -58px;
+transform: matrix(-0.87, 0.0, 0.0, 0.87, 0, 0);
+opacity: 0.8;
 }
 
 .page-2{
-  background-color: #ffffff;
+background-color: #ffffff;
 }
 .about {
-  display: flex;
-  background-color: #62d0df;
+display: flex;
+background-color: #62d0df;
 
 }
 
 .blok1{
-  position: absolute;
-  background-color: #ffffff;
-  height: 79px;
-  width: 72.5%;
+position: absolute;
+background-color: #ffffff;
+height: 79px;
+width: 72.5%;
 }
 
 .blok2{
-  position: absolute;
-  background-color: #ffffff;
-  height: 79px;
-  width: 72.5%;
+position: absolute;
+background-color: #ffffff;
+height: 79px;
+width: 72.5%;
 }
 
 .about_inner {
-  height:450px ;
-  align-items: center;
-  display: flex;
-  max-width: 555px;
-  justify-content: center;
+height:450px ;
+align-items: center;
+display: flex;
+max-width: 555px;
+justify-content: center;
 }
 
 .about_title {
-  margin-bottom: 75px;
-  color: #ffff;
+margin-bottom: 75px;
+color: #ffff;
 }
 .about_description {
-  font-size: 20px;
-  color: #ffff;
-  line-height: 35px;
+font-size: 20px;
+color: #ffff;
+line-height: 35px;
 }
 .about_desc-bold {
-  font-size: 24px;
-  color: #ffff;
-  line-height: 30px;
+font-size: 24px;
+color: #ffff;
+line-height: 30px;
 }
 .about_img-box {
-  max-width: 525px;
+max-width: 525px;
 }
 .about_img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+height: 100%;
+width: 100%;
+object-fit: cover;
 }
 
 .about-us {
-  color: #22356f;
+color: #22356f;
 }
 .about-us_top {
-  display: flex;
-  grid-template-columns: 1fr 2fr 1fr;
-  margin: 150px 10px 76px;
-  width: 1440px;
-  height: 361px;
-  top: 1446px;
+display: flex;
+grid-template-columns: 1fr 2fr 1fr;
+margin: 150px 10px 76px;
+width: 1440px;
+height: 361px;
+top: 1446px;
 }
 
 .about-us_title {
-  width: 300px;
-  height: 210px;
-  line-height: 22.5px;
-  letter-spacing: 0.06em;
-  margin-left:106px ;
+width: 300px;
+height: 210px;
+line-height: 22.5px;
+letter-spacing: 0.06em;
+margin-left:106px ;
 }
 .about-us_desc {
-  width: 592px;
-  height: 210px;
-  top: 1596px;
-  margin-left:200px;
-  font-size: 24px;
-  line-height: 34px;
-  letter-spacing: 0.005em;
+width: 592px;
+height: 210px;
+top: 1596px;
+margin-left:200px;
+font-size: 24px;
+line-height: 34px;
+letter-spacing: 0.005em;
 }
 
 .page-3{
-  width: 100%;
-  height: 360px;
-  margin-top: 200px;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #ffffff;
+width: 100%;
+height: 360px;
+margin-top: 200px;
+justify-content: space-between;
+align-items: center;
+background-color: #ffffff;
 }
 
 .page-3-header{
-  position: absolute;
-  width: 300px;
-  height: 21px;
-  top: 1982px;
-  margin-left: 620px;
-  font-family: Larsseit;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.06em;
-  text-align: center;
-  color: #22356F
+position: absolute;
+width: 300px;
+height: 21px;
+top: 1982px;
+margin-left: 620px;
+font-family: Larsseit;
+font-size: 16px;
+line-height: 19px;
+letter-spacing: 0.06em;
+text-align: center;
+color: #22356F
 }
 
 
 
 .group-3{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 360px;
-  top: 1927px;
-  margin-top: 40px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+width: 100%;
+height: 360px;
+top: 1927px;
+margin-top: 40px;
 }
 
 .g3block-1{
-  display:grid;
-  justify-content: center;
-  width: 25%;
-  height: 360px;
-  top: 1927px;
-  background: #e4b0a9;
+display:grid;
+justify-content: center;
+width: 25%;
+height: 360px;
+top: 1927px;
+background: #e4b0a9;
 
 }
 
 .g3block-2{
-  display:grid;
-  justify-content: center;
-  width: 25%;
-  height: 360px;
-  top: 1927px;
-  background:#C4E769;
+display:grid;
+justify-content: center;
+width: 25%;
+height: 360px;
+top: 1927px;
+background:#C4E769;
 }
 
 .g3block-3{
-  display:grid;
-  justify-content: center;
-  width: 25%;
-  height: 360px;
-  top: 1927px;
-  background: #62D0DF;
+display:grid;
+justify-content: center;
+width: 25%;
+height: 360px;
+top: 1927px;
+background: #62D0DF;
 }
 
 .g3block-4{
-  display:grid;
-  justify-content: center;
-  width: 25%;
-  height: 360px;
-  background: #0052C1;
+display:grid;
+justify-content: center;
+width: 25%;
+height: 360px;
+background: #0052C1;
 }
 
 .unseenBlok{
-  margin-left: 20px;
-  width: 255px;
-  height: 72px;
-  box-shadow: 0px -1px 0px 0px #FFFFFF inset;
+margin-left: 20px;
+width: 255px;
+height: 72px;
+box-shadow: 0px -1px 0px 0px #FFFFFF inset;
 }
 
 .Ellipse_Name{
-  width: 300px;
-  height: 54px;
-  font-family: Larsseit;
-  font-size: 32px;
-  line-height: 34px;
-  letter-spacing: -0.006em;
-  text-align: left;
-  color: #FFFFFF;
-  margin-top: -100px;
-  justify-content: center;
-  display:flex
+width: 300px;
+height: 54px;
+font-family: Larsseit;
+font-size: 32px;
+line-height: 34px;
+letter-spacing: -0.006em;
+text-align: left;
+color: #FFFFFF;
+margin-top: -100px;
+justify-content: center;
+display:flex
 
 }
 
 .Ellipse{
-  width: 9px;
-  height: 9px;
-  margin-right: 30px;
-  left: 54px;
-  background: #E9B730;
-  border-radius: 50%;
+width: 9px;
+height: 9px;
+margin-right: 30px;
+left: 54px;
+background: #E9B730;
+border-radius: 50%;
+
+}
+
+.group-4{
+width: 100%;
+height: 720px;
+display: grid;
+margin-top: 60px;
+}
+
+.g4Line{
+display: flex;
+width: 100%;
+height: 480px;
+}
+
+.g4blok-1{ 
+
+background:#22356F;
+width: 33.33%;
+height: 480px;
+display:grid;
+justify-content: center;
+}
+
+.g4blok-2{ 
+display:grid;
+justify-content: center;
+background: #0052C1;
+width: 33.33%;
+height: 480px;
+
+
+}
+
+.g4blok-3{ 
+ 
+  display:grid;
+  justify-content: center;
+  background-image: url('./92a80edb8b973a793ef7422d5a3e4496.jpg');
+  background-size: cover;
+  width: 33.33%;
+  height: 480px;
+  
+}
+
+.g4blok-4{ 
+display:grid;
+justify-content: center;
+background: #62D0DF;
+width: 33.33%;
+height: 480px;
+
+
+}
+
+.g4blok-5{ 
+display:grid;
+justify-content: center;
+background: #DEE1FF;
+width: 33.33%;
+height: 480px;
+
+
+}
+
+.g4blok-6{ 
+display:grid;
+justify-content: center;
+background: #8F00FF;
+width: 33.33%;
+height: 480px;
+
+}
+
+.unseenBlokG4{
+margin-left: 20px;
+box-shadow: 0px -1px 0px 0px #FFFFFF inset;
+width: 340px;
+height: 96px;
+
+}
+
+.Ellipse_NameG4{
+width: 200px;
+height: 72px;
+font-family: Larsseit;
+font-size: 32px;
+line-height: 34px;
+letter-spacing: -0.006em;
+text-align: left;
+color: #FFFFFF;
+margin-top: -150px;
+justify-content: center;
+display:flex
 
 }
 
@@ -472,3 +567,163 @@
   display:flex
 
 }
+
+
+.page-4{
+  margin-top: 1100px;
+  width: 100%;
+  height: 360px;
+  background-color: #ffffff;
+}
+
+.p4blok1{
+  width: 100%;
+  display: grid;
+  height: 480px;
+  
+
+}
+
+.B1Line1{
+  display: flex;
+  width: 100%;
+  height: 240px;
+}
+
+.B1Line2{
+  display: flex;
+  width: 100%;
+  height: 240px;
+}
+
+.Blok {
+  display: grid;
+  justify-content: center;
+  width: 33.33%;
+  height: 240px;
+  
+}
+
+.BlokName{
+  width: 234px;
+  height: 36px;
+  top: 55px;
+  left: 105px;
+  font-family: Larsseit;
+  font-size: 28px;
+  line-height: 33px;
+  letter-spacing: -0.03em;
+  text-align: left;
+  color: #22356F;
+
+
+
+}
+
+.BlokDesc{
+  width: 298px;
+  height: 84px;
+  top: 119px;
+  left: 105px;
+  font-family: Larsseit;
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: -0.03em;
+  text-align: left;
+  color: #22356F80;
+
+}
+
+.p4blok2{
+  position: absolute;
+  width: 100%;
+  height: 800px;
+  display: flex;
+  align-items: center;
+}
+
+.img_blok{
+  width: 480px;
+  height: 800px;
+  top: 3909px;
+  background-image: url('./acfdbf3563c8350cda6977544fe04db8.jpg');
+  background-size: cover;
+  display: flex;
+}
+
+.mainblok{
+  width: 800px;
+  height: 800px;
+  width: 676px;
+  margin-left: 300px;
+  margin-top: 120px;
+  left: 586px;
+  display: grid;
+
+}
+.p4b2content{ 
+  width: 800px;
+  height: 800px;
+  
+  left: 586px;
+  display: grid;
+  }
+
+ .p4b2c-head{
+    font-family: Larsseit;
+    font-size: 16px;
+    line-height: 12px;
+    letter-spacing: 0.06em;
+    text-align: left;
+    width: 250px;
+    height: 20px;   
+    left: 586px;
+    color:  #22356F;
+
+
+  }
+
+
+  .p4b2c-depression {
+    width: 676px;
+    height: 215px;
+    top: 4257px;
+    left: 586px;
+    font-family: Larsseit;
+    font-size: 36px;
+    line-height: 53px;
+    letter-spacing: -0.01em;
+    text-align: left;
+    margin-top: 30%;
+    background-image: linear-gradient(0deg, #22356F, #22356F), linear-gradient(0deg, #6CD3E1, #6CD3E1);
+    -webkit-background-clip: text; /* для поддержки вебкит-браузеров */
+    color: transparent; /* делаем текст прозрачным */
+  }
+
+  .p4b2c-btn{
+    width: 518px;
+    height: 43px;
+    top: 4624px;
+    left: 586px;
+    font-family: Larsseit;
+    font-size: 16px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    text-align: left;
+    color:  #FAB63E;
+    border: none;
+    background-color: #ffffff;
+    margin-top: 10%;
+   
+    
+
+
+  }
+
+
+  .color2{
+    color: #6CD3E1;
+  }
+  .p4b2c-btn span{
+    font-weight: 60800;
+  }
